--- a/index.htm
+++ b/index.htm
@@ -1,1 +1,1 @@
-https://kz0bxxhrzfv1vzh3h7xjyw.on.drv.tw/Funci%C3%B3n%20Cuadr%C3%A1tica/JMatch.htm
+<a href="https://kz0bxxhrzfv1vzh3h7xjyw.on.drv.tw/Funci%C3%B3n%20Cuadr%C3%A1tica/JMatch.htm" target="_blank"><font style="vertical-align: inherit;"><font style="vertical-align: inherit;">https://kz0bxxhrzfv1vzh3h7xjyw.on.drv.tw/Función Cuadrática/JMatch.htm</font></font></a>
