--- a/index.htm
+++ b/index.htm
@@ -1,1 +1,109 @@
-<a href="https://kz0bxxhrzfv1vzh3h7xjyw.on.drv.tw/Funci%C3%B3n%20Cuadr%C3%A1tica/JMatch.htm" target="_blank"><font style="vertical-align: inherit;"><font style="vertical-align: inherit;">https://kz0bxxhrzfv1vzh3h7xjyw.on.drv.tw/Función Cuadrática/JMatch.htm</font></font></a>
+<!DOCTYPE html>
+<html xmlns="http://www.w3.org/1999/xhtml" lang="en" xml:lang="en" prefix="dc: http://purl.org/dc/elements/1.1/">
+<head>
+<meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
+
+<title>
+[strPlainIndexTitle]
+</title>
+
+<!-- Made with executable version [strFullVersionInfo] -->
+
+<!-- The following insertion allows you to add your own code directly to this head tag from the configuration screen -->
+
+[strHeaderCode]
+
+<style>
+
+:root{
+	--strFontFace:       [strFontFace];
+	--strFontSize:       [strFontSize];
+	--strTextColor:      [strTextColor];
+	--strTitleColor:     [strTitleColor];
+	--strLinkColor:      [strLinkColor];
+	--strVLinkColor:     [strVLinkColor];
+	[inclPageBGColor]--strPageBGColor:    [strPageBGColor];[/inclPageBGColor]
+	[inclExBGColor]--strExBGColor:      [strExBGColor];[/inclExBGColor]
+}
+
+body{
+	font-family: var(--strFontFace);
+[inclPageBGColor]	background-color: var(--strPageBGColor);[/inclPageBGColor]
+	color: var(--strTextColor);
+[inclGraphicURL]	background-image: url([strGraphicURL]);[/inclGraphicURL] 
+	margin-right: 5%;
+	margin-left: 5%;
+	font-size: var(--strFontSize);
+	padding-bottom: 0.5em;
+}
+
+div.Titles{
+	padding: 0.5em;;
+	text-align: center;
+	color: var(--strTitleColor);
+}
+
+.ExerciseTitle{
+	font-size: 140%;
+	color: var(--strTitleColor);
+}
+
+.ExerciseSubtitle{
+	font-size: 125%;
+	color: var(--strTitleColor);
+}
+
+div.IndexDiv{
+	margin-left: auto;
+	margin-right: auto;
+	padding: 2em;
+	border-style: solid;
+	border-width: 1px;
+	text-align: center;
+	width: 40%;
+	background-color: var(--strExBGColor);
+	color: var(--strTextColor);
+	font-size: 120%;
+}
+
+.Index{
+	text-align: left;
+	font-size: 100%;
+}
+
+ul.Index li{
+	margin: 0.5em;
+}
+
+a{
+	color: var(--strLinkColor);
+}
+
+a:visited{
+	color: var(--strVLinkColor);
+}
+
+a:hover{
+	color: var(--strLinkColor);
+}
+
+</style>
+</head>
+<body>
+<div class="NavButtonBar">&#160;</div>
+
+<div class="Titles">
+	<h2 class="ExerciseTitle">[strIndexTitle]</h2>
+</div>
+
+<div style="text-align: center;">
+<div class="IndexDiv">
+<ul class="Index">
+
+[BeginIndexItem]<li><a href="[strIndexItemURL]">[strIndexItemTitle]</a>&#160;&#160;&#160;&#160;&#160;</li>[EndIndexItem]
+
+</ul>
+</div>
+</div>
+
+</body></html>
